# daria

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
src/daredev-fraud/data_ingestion/: __init__.py
src/daredev-fraud/notebooks/: eda_transactions_kaggle.ipynb
src/daredev_fraud/: __init__.py
src/daredev_fraud/data_ingestion/: __init__.py  loader.py
src/daredev_fraud/notebooks/: eda_transactions_kaggle.ipynb  transaction_augmentation.ipynb
