[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daredev-fraud"
version = "0.1.0"
description = "Real-time fraud detection using Kinesis Data Streams"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "kagglehub",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"